package entity.base;

/**
 * The interface Despawnable.
 */
public interface Despawnable {
    /**
     * Is despawn boolean.
     *
     * @return the boolean
     */
    boolean isDespawn();
}
