package entity.base;

/**
 * The interface Renderable.
 */
public interface Renderable {
    /**
     * Update.
     */
    void update();
}
